# ceremegbellum

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  requirements_test.txt  setup.py
.github/workflows/: ci.yml
cmb/: __init__.py  functions.py  helpers.py  source_space.py  utils.py  visualization.py
examples/: example_script.ipynb  example_script.py
