[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmb"
dynamic = ["version"]
description = "Cere-MEG-Bellum (CMB) - Cerebellum segmentation and forward solution calculation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "John Gustaf Wilhelm Samuelsson", email = "johnsam@mit.edu"},
    {name = "Christoph Dinh", email = "christoph.dinh@brain-link.de"},
]
keywords = ["neuroscience", "neuroimaging", "MEG", "cerebellum", "brain"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "mne>=1.8",
    "matplotlib>=3.9",
    "nibabel>=5.3",
    "pandas>=2.2",
    "pooch>=1.8",
    "antspyx>=0.5",
    "torch>=2.0",
    "nnunet>=1.7",
]

[project.optional-dependencies]
viz = ["pyvista>=0.43"]
test = ["pytest>=8.0", "pytest-cov>=5.0"]
all = ["cmb[viz]", "cmb[test]"]

[project.urls]
Homepage = "https://github.com/johnsam7/ceremegbellum"
Source = "https://github.com/johnsam7/ceremegbellum/"
Tracker = "https://github.com/johnsam7/ceremegbellum/issues/"

[tool.setuptools.dynamic]
version = {attr = "cmb._version.__version__"}

[tool.setuptools.packages.find]
include = ["cmb*"]
